# timesheetTracker

./: .replit  alembic.ini  analyze_timesheet.py  apiClient.ts  crud.py  database.py  failedTests.txt  failed_tests.txt  logger.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  replit.nix  schemas.py  server.crt  server.key  test.db  test.db-journal  testOutput.txt  test_timesheet.csv  timesheet_repository.py  utils.py
attached_assets/: API-CLIENT.TS  Hours Tracker.csv  Hours Tracker.txt  Hours Tracker.xlsx  Pasted--ERROR-at-setup-of-test-1739305709154.txt  Pasted--File-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-sqlalchemy-pool-impl-py-li-1739327363482.txt  Pasted--app-post-init-db-app-get-init-db-async-def-initialize-database-force-bool-False-db--1739226171607.txt  Pasted--app-post-time-entries-response-model-schemas-TimeEntry-def-create-time-entry-entry-schemas-T-1739226308504.txt  Pasted--app-put-projects-project-id-response-model-schemas-Project-def-update-project-project-id-s-1739294784803.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1736454357549.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1736454734577.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1736454803931.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1736454888371.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1736454960243.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1736455021695.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1736455213733.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1736455431583.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1736455554961.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1736455805199.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1736457614930.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1736458748764.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1739309255882.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1739311815166.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1739312077713.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1739312364849.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1739312704075.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1739313099573.txt  Pasted--detail-psycopg2-errors-ForeignKeyViolation-insert-or-update-on-table-time-entries-vio-1739319097239.txt  Pasted--detail-psycopg2-errors-UndefinedColumn-column-updated-at-of-relation-time-entries--1735937145153.txt  Pasted--entries-entries--1739287803403.txt  Pasted--home-runner-workspace-pythonlibs-lib-python3-11-site-packages-openpyxl-worksheet-reader-py-329-U-1739305418519.txt  (+90 more)
database/: __init__.py  crud.py  (+7 more)
(+58 files in other folders)
