[project]
name = "repl-nix-timesheettracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "crud>=0.1",
    "datasetrising>=1.0.4",
    "fastapi-cors>=0.0.6",
    "fastapi[all]>=0.115.6",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "httpx>=0.28.1",
    "logger>=1.4",
    "oauthlib>=3.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.4",
    "pyopenssl>=25.0.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "schemas>=0.7.1",
    "sqlalchemy>=2.0.36",
    "twilio>=9.4.4",
    "uvicorn[standard]>=0.34.0",
]

[tool.setuptools]
packages = [
    "database",
    "models",
    "services",
    "migrations",
    "utils"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
asyncio_mode = "strict"
