[project]
name = "repl-nix-timesheettracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "anthropic>=0.45.2",
    "crud>=0.1",
    "datasetrising>=1.0.4",
    "fastapi-cors>=0.0.6",
    "fastapi[all]>=0.104.1",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "httpx>=0.28.1",
    "logger>=1.4",
    "oauthlib>=3.2.2",
    "openai>=1.61.1",
    "openpyxl>=3.1.2",
    "pandas>=2.1.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.4.2",
    "pyopenssl>=25.0.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "sendgrid>=6.11.0",
    "sqlalchemy>=2.0.23",
    "starlette>=0.41.3",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
    "twilio>=9.4.4",
    "uvicorn[standard]>=0.24.0",
]

[tool.setuptools]
packages = [
    "database",
    "models",
    "services",
    "migrations",
    "utils"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
asyncio_mode = "strict"
